fixed time cutting off on certain displays

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -102,15 +102,15 @@ a {
   display: block;
 
   @media (min-width: 30em){ //480px
-    width: 80%;
+    width: 85%;
   }
 
   @media (min-width: 40em){ //640px
-    width: 60%;
+    width: 65%;
   }
 
   @media (min-width: 45em){ //720px
-    width: 50%;
+    width: 55%;
   }
 
   @media (min-width: 80em){ //1280px
